# hello-hpc-1st

./: .gitignore  readme.md
01-hellohpc/: submit.py
02-simple_question/: answer.yaml  evaluate.py  readme.md  submit.py  submit.yaml  template.txt
03-bitmatrix/: .gitignore  README.md  evaluate.py  submit.py  submit.yaml
03-bitmatrix/source_code/: Makefile  common.h  main.cpp  user.cpp
04-oceansim/: README.md  evaluate.py  submit.yaml
04-oceansim/source_code/: OceanSim.cpp  download.sh  verify
05-calculation/: download.sh  evaluate.py  readme.md  submit.py  submit.yaml  which_core.py  writeup.md
05-calculation/source_code/: compile.sh  main.cpp  query_sum.h
06-m4c/: .gitignore  README.md  evaluate.py  gitignore.py  submit.py
06-m4c/source_code/: build  main.py  server  start
07-amazing_llm/: .gitignore  download.sh  evaluate.py  readme.md  submit.yaml
07-amazing_llm/source_code/: run.py  test_server.py
08-graph500/: .gitignore  evaluate.py  readme.md  submit.yaml
08-graph500/source_code/: graph.sh
09-rope_net_simulation/: .gitignore  README.md  evaluate.py  submit.yaml
09-rope_net_simulation/source_code/: CMakeLists.txt  Initialize.h  LoadFNS.cpp  LoadFNS.h  LoadPolyhedron.cpp  LoadPolyhedron.h  LoadSHPara.cpp  MatrixOperations.cpp  MatrixOperations.h  OdeEuler.cpp  OdeEuler.h  SHPara.h  Shp.txt  SurfacePoints.cpp  SurfacePoints.h  acceleration.cpp  acceleration.h  calGF.cpp  calGF.h  constant.h  fact.txt  initialize.cpp  main.cpp  poly.txt  topo.txt
1-hellohpc/: readme.md
10-wrf/: .gitignore  evaluate.py  readme.md  submit.yaml
(+18 files in other folders)
